--- a/style.css
+++ b/style.css
@@ -381,7 +381,12 @@ button:hover{
     }
 }
 
-
+@media (max-width: 378px) {
+    button{
+        width: 100px;
+        font-size: 13px;
+    }
+}
 
 
 @media (max-width: 350px) {
